--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.3",
     "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
